Fixed price overflow issue in cart.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -783,6 +783,25 @@ tbody>tr:nth-child(odd) {
   }
 }
 
+@media only screen and (max-width : 424px) {
+  .cart-selector {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 1rem;
+  }
+  .cart-selector select {
+    margin-left: 0;
+    margin-top: .4rem;
+    width: 6rem;
+    padding: .5rem;
+  }
+  .cart-selector button {
+    padding: .5rem;
+    margin-top: .4rem;
+  }
+}
+
 @media only screen and (max-width : 403px) {
   .hero {
     height: 40vh;
@@ -805,4 +824,5 @@ tbody>tr:nth-child(odd) {
   .footer div:last-child {
     display: none;
   }
+  
 }
